[package]
name = "rig-helixdb"
version = "0.1.2"
edition.workspace = true
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for HelixDB."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
helix-rs = "0.1.9"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rig-core = { path = "../rig-core", version = "0.23.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "vector_search_helixdb"
required-features = ["rig-core/derive"]
