[package]
name = "rig-lancedb"
version = "0.2.9"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for LanceDB."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
lancedb = "0.18.1"
rig-core = { path = "../rig-core", version = "0.11.1" }
arrow-array = "54.2.1"
serde_json = "1.0.128"
serde = "1.0.210"
futures = "0.3.30"

# https://github.com/jhpratt/deranged/issues/18
deranged = "=0.4.0"

[dev-dependencies]
tokio = "1.40.0"
anyhow = "1.0.89"
httpmock = "0.7.0"

[[example]]
name = "vector_search_local_ann"
required-features = ["rig-core/derive"]

[[example]]
name = "vector_search_local_enn"
required-features = ["rig-core/derive"]

[[example]]
name = "vector_search_s3_ann"
required-features = ["rig-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
