[package]
name = "rig-lancedb"
version = "0.2.25"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for LanceDB."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
lancedb = { workspace = true }
rig-core = { path = "../rig-core", version = "0.23.0", default-features = false }
arrow-array = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }

# https://github.com/jhpratt/deranged/issues/18
deranged = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
httpmock = { workspace = true }

[features]
default = ["rig-tls"]
rig-tls = ["rig-core/reqwest-tls"]
rig-rustls = ["rig-core/reqwest-rustls"]

[[example]]
name = "vector_search_local_ann"
required-features = ["rig-core/derive"]

[[example]]
name = "vector_search_local_enn"
required-features = ["rig-core/derive"]

[[example]]
name = "vector_search_s3_ann"
required-features = ["rig-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
