[package]
name = "rig-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
rig-core = { path = "../rig-core", version = "0.9.1" }
syn = { version = "2.0.100" }
quote = { version = "1.0.40" }
convert_case = { version = "0.8.0" }
serde_json = "1.0"
schemars = "0.8.22"

[dev-dependencies]
serde = "1.0"
tokio = { version = "1.44.0", features = ["full"] }
