[package]
name = "rig-neo4j"
version = "0.3.9"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "Neo4j implementation of a Rig vector store."
repository = "https://github.com/0xPlaygrounds/rig"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
neo4rs = { workspace = true }
rig-core = { path = "../rig-core", version = "0.23.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
textwrap = { workspace = true }
term_size = { workspace = true }
testcontainers = { workspace = true }
tracing-subscriber = { workspace = true }
httpmock = { workspace = true }

[[example]]
name = "vector_search_simple"
required-features = ["rig-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
