[package]
name = "rig-pinecone"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for Pinecone. https://www.pinecone.io/"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.11.0" }
serde_json = "1.0.128"
serde = "1.0.210"
pinecone-sdk = "0.1.2"
uuid = { version = "1.13.1", features = ["v4"] }
prost-types = "0.12"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
anyhow = "1.0.89"
testcontainers = "0.23.1"
httpmock = "0.7.0"
