[package]
name = "rig-postgres"
version = "0.1.7"
edition = "2021"
description = "PostgreSQL-based vector store implementation for the rig framework"
license = "MIT"
readme = "README.md"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.11.1", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tracing = "0.1.40"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
] }
pgvector = { version = "0.4", features = ["sqlx"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.94"
log = "0.4.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-test = "0.4.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }


testcontainers = "0.23.1"
httpmock = "0.7.0"

dotenvy = "0.15.7"
