[package]
name = "rig-qdrant"
version = "0.1.4"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for Qdrant. https://qdrant.tech"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.6.0" }
serde_json = "1.0.128"
serde = "1.0.210"
qdrant-client = "1.12.1"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
anyhow = "1.0.89"
testcontainers = "0.23.1"

[[example]]
name = "qdrant_vector_search"
required-features = ["rig-core/derive"]


[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
