[package]
name = "rig-qdrant"
version = "0.1.12"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for Qdrant. https://qdrant.tech"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.11.1" }
serde_json = "1.0.128"
serde = "1.0.210"
qdrant-client = "1.13.0"
uuid = { version = "1.13.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
anyhow = "1.0.89"
testcontainers = "0.23.1"
httpmock = "0.7.0"

[[example]]
name = "qdrant_vector_search"
required-features = ["rig-core/derive"]


[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
