[package]
name = "rig-qdrant"
version = "0.1.28"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for Qdrant. https://qdrant.tech"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.23.0" }
serde_json = { workspace = true }
serde = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
testcontainers = { workspace = true }
httpmock = { workspace = true }

[[example]]
name = "qdrant_vector_search"
required-features = ["rig-core/derive"]


[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
