[package]
name = "rig-s3vectors"
version = "0.1.11"
edition = { workspace = true }
description = "AWS S3Vectors vector store implementation for the rig framework"
license = "MIT"

[dependencies]
aws-sdk-s3vectors = "1.1.0"
aws-smithy-types = { workspace = true, features = [
    "serde-deserialize",
    "serde-serialize",
] }
rig-core = { path = "../rig-core", version = "0.23.0", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "s3vectors_vector_search"
required-features = []
