[package]
name = "rig-scylladb"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "ScyllaDB vector store index integration for Rig. High-performance NoSQL database with vector search capabilities."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.13.0", features = ["derive"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
scylla = "1.2.0"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
anyhow = "1.0.89"
testcontainers = "0.23.1"
tracing-subscriber = "0.3"
httpmock = "0.7.0"
serde_json = "1.0"

[[example]]
name = "scylladb_vector_search"
required-features = ["rig-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"] 
