[package]
name = "rig-scylladb"
version = "0.1.14"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "ScyllaDB vector store index integration for Rig. High-performance NoSQL database with vector search capabilities."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.23.0", features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
scylla = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
testcontainers = { workspace = true }
tracing-subscriber = { workspace = true }
httpmock = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "scylladb_vector_search"
required-features = ["rig-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["rig-core/derive"]
