[package]
name = "rig-surrealdb"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rig vector store index integration for SurrealDB. https://surrealdb.com/"
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
surrealdb = { version = "2.1.4", features = ["kv-mem", "protocol-ws"] }
rig-core = { path = "../rig-core", version = "0.8.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.13.1", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
