[package]
name = "rig-surrealdb"
version = "0.1.4"
edition = "2021"
description = "SurrealDB vector store implementation for the rig framework"
license = "MIT"

[dependencies]
surrealdb = { version = "2.1.4", features = ["protocol-ws", "kv-mem"] }
rig-core = { path = "../rig-core", version = "0.11.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.13.1", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "vector_search_surreal"
required-features = ["rig-core/derive"]
