[package]
name = "rig-vertex"
version = "0.1.0"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "Google Vertex model provider Rig integration."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
rig-core = { path = "../rig-core", version = "0.21.0" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
