[package]
name = "rig-vertexai"
version = "0.1.0"
edition.workspace = true
license = "MIT"
readme = "README.md"
description = "VertexAI model provider for Rig integration."


[dependencies]
google-cloud-aiplatform-v1 = { version = "1.2.0", default-features = false, features = [
    "prediction-service",
] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
anyhow = { workspace = true }
