[package]
name = "rig-vertexai"
version = "0.1.0"
edition.workspace = true
license = "MIT"
readme = "README.md"
description = "VertexAI model provider for Rig integration."


[dependencies]
google-cloud-aiplatform-v1 = { workspace = true }
google-cloud-auth = { workspace = true }
rig-core = { path = "../rig-core", version = "0.24.0", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
