[package]
edition = "2024"
name = "rig-wasm"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rig-core = { workspace = true, features = ["worker"] }
serde_json.workspace = true
anyhow = { workspace = true }
futures = { workspace = true }

console_error_panic_hook = "0.1.7"
send_wrapper = "0.6.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
