[package]
edition = "2024"
name = "rig-wasm"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rig-core = { version = "0.17.1", features = ["worker", "audio", "image"] }
# Comment the new version out until we are ready to upgrade!
# rig-core = { version = "0.18.2", path = "../rig-core", features = ["worker", "audio", "image"] }
serde_json.workspace = true
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }

console_error_panic_hook = "0.1.7"
send_wrapper = "0.6.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-streams = "0.4.2"
bytes.workspace = true
base64.workspace = true
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
tera = "1.20.0"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
