[package]
name = "rig-x"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = "0.7.7"
base64 = "0.22.1"
lambda_http = "0.13.0"
ring = "0.17.8"
serde = "1.0.215"
serde_json = "1.0.132"
rig-core = { path = "../rig-core", version = "0.4.1" }

tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12.9", features = ["json"]}

[dev-dependencies]
tokio = "1.40.0"
