[package]
name = "rig-a2a"
version.workspace = true
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "Agent-to-Agent (A2A) protocol client integration for the Rig agent framework."
repository = "https://github.com/0xPlaygrounds/rig"

[lints]
workspace = true

[dependencies]
rig-core = { path = "../rig-core", version = "0.40.0", default-features = false }
a2a = { workspace = true }
a2a-client = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }

[dev-dependencies]
a2a-server = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rig-core = { path = "../rig-core", version = "0.40.0", default-features = false, features = ["test-utils"] }

[features]
default = ["rustls"]
rustls = ["a2a-client/rustls-tls"]
native-tls = ["a2a-client/native-tls"]
