[package]
name = "rig-bedrock"
version.workspace = true
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "AWS Bedrock model provider for Rig integration."

[lints]
workspace = true

[features]
default = ["rustls"]
rustls = ["rig-core/rustls", "reqwest/rustls"]
native-tls = ["rig-core/native-tls", "reqwest/native-tls"]

[dependencies]
async-stream = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types = { workspace = true }
# The generated `rustls` feature selects AWS's legacy Hyper 0.14 connector.
aws-sdk-bedrockruntime = { workspace = true, features = ["rt-tokio", "default-https-client"] }
aws-sigv4 = { workspace = true }
aws-smithy-types = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "stream"] }
# `image` / `audio` are enabled so `Capabilities` always includes those associated
# types (workspace `--all-features` unification); Mantle marks both as `Nothing`.
rig-core = { path = "../rig-core", version = "0.40.0", default-features = false, features = [
    "image",
    "audio",
    "reqwest",
] }
rig-derive = { path = "../rig-derive", version = "0.40.0" }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-futures = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing-subscriber = { workspace = true }
