[package]
name = "rig-bevy"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license = "MIT"
readme = "README.md"
description = "Experimental ECS-native runtime for Rig."
repository = "https://github.com/0xPlaygrounds/rig"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
bevy_ecs = { workspace = true }
futures = { workspace = true }
jsonschema = { workspace = true }
rig-core = { path = "../rig-core", version = "0.40.0", default-features = false }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []

[dev-dependencies]
rig-runtime-conformance = { path = "../rig-runtime-conformance" }
tokio = { workspace = true, features = ["full"] }
