[package]
name = "rig-candle"
version.workspace = true
edition.workspace = true
license = "MIT"
readme = "README.md"
description = "Local Candle Llama, SmolLM2, and Qwen3 completion models for Rig"
repository = "https://github.com/0xPlaygrounds/rig"

[lints]
workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
futures = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rig-core = { path = "../rig-core", version = "0.40.0", default-features = false }
tokio = { workspace = true, features = ["rt", "sync"] }
tokenizers = { workspace = true, features = ["onig"] }

[target.'cfg(target_family = "wasm")'.dependencies]
rig-core = { path = "../rig-core", version = "0.40.0", default-features = false, features = ["wasm"] }
tokenizers = { workspace = true, default-features = false, features = ["unstable_wasm"] }

[dev-dependencies]
rig-agent = { path = "../rig-agent", version = "0.40.0", default-features = false, features = ["test-utils"] }
rig-core = { path = "../rig-core", version = "0.40.0", default-features = false, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
